# Chat-Application-Project

./: CMakeLists.txt  LICENSE  Makefile  README.md  client  server
src/: channels_base.h  client.c  clients_base.h  common.h  communicate.h  file_base.h  handle_msg.h  msg_struct.h  server.c
